--- a/训练日志.md
+++ b/训练日志.md
@@ -1,6 +1,10 @@
 
-+ 事件：初始训练
-    + 日期：11.03
-    + 效果：无
-    + 配置目录：table_2021/
++ 事件  : 初始训练
+    + 日期  : 11.03
+    + 效果  : 无
+    + 配置目录: table_2021/
     
++ 事件: 修改模型
+    + 日期  : 11.04
+    + 效果  : 无
+    + 配置目录: table_v2/
